# Clippy

./: .gitignore  FLATHUB.md  InRelease  LINUX-PARITY-BRIEF.md  MAC-DEBUG-BRIEF.md  MAC-PANEL-BRIEF.md  MAC-SYNC-FIX-BRIEF.md  Makefile  Packages  README.md  Release  Release.gpg  clippy.gpg  clippy_0.2.0_all.deb  clippy_0.2.1_all.deb  clippy_0.2.2_all.deb  clippy_0.2.3_all.deb  clippy_0.2.4_all.deb  clippy_0.2.5_all.deb  clippy_1.0.0_all.deb  clippy_1.1.0_all.deb  clippy_1.3.0_all.deb  clippy_1.3.1_all.deb  clippy_1.3.2_all.deb  clippy_1.3.3_all.deb  clippy_1.3.4_all.deb  clippy_1.4.0_all.deb  clippy_1.4.1_all.deb  clippy_1.4.2_all.deb  clippy_1.4.3_all.deb  clippy_1.4.4_all.deb  clippy_1.4.5_all.deb  clippy_1.4.6_all.deb  clippy_1.4.7_all.deb  clippy_1.4.8_all.deb  clippy_1.4.9_all.deb  index.html  pyproject.toml
.github/workflows/: apt-repo.yml  ci.yml  release.yml
clippy/: __init__.py  capture.py  cli.py  clip_types.py  clipboard.py  config.py  daemon.py  ipc.py  mac_app.py  mac_panel.py  mac_settings.py  mac_source.py  mac_tabs.py  mac_update.py  panel.py  progress.py  settings.py  settings_window.py  sound.py  storage.py  sync.py  tabs.py  theme.py  tray.py  updates.py
clippy/backends/: __init__.py  base.py  mac.py  wayland.py
packaging/: README.md
packaging/apt/: build-repo.sh  clippy.asc
packaging/arch/: PKGBUILD
packaging/deb/: build-deb.sh
packaging/flatpak/: build-flatpak.sh  io.github.davidboulay.Clippy.metainfo.xml  io.github.davidboulay.Clippy.yaml
scripts/: mac_pb_probe.py  sync_delivery_test.py  sync_drift_test.py  sync_selftest.py
(+5 files in other folders)
